# jpnizing_america

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/jpnizing_america/: app.py  config.py  db.py  seed.py
backend/jpnizing_america/classes/: dao.py  dto.py  models.py  routes.py
backend/jpnizing_america/core/: auth.py  dao.py
frontend/: Dockerfile  app.config.ts  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/components/: Accordion.vue  Header.vue  Instagram.vue  Youtube.vue
frontend/composables/: locale.ts
frontend/layouts/: default.vue
frontend/pages/: 404.vue  about.vue  clases.vue  contacto.vue  error.vue  index.vue  login.vue  programas.vue  some-page.vue
frontend/stores/: auth.ts  classes.ts  website.ts
frontend/types/classes/: classesData.d.ts
