[project]
name = "jpnizing_america"
version = "1.0.0"
description = "Simple api for my japanese teacher friend"
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["jpnizing_america"]